<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StandardFence"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Area"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/areaid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/acre" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ratio" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Length"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/len"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:inputType="none|numberDecimal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/wid"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/WireNumberLine"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/planets_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/range" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/NumberWiresCross"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/wires_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/second" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/BarbedWire" />

            <Spinner
                android:id="@+id/barbed_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/barbed" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/NumberOfGates"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/gates_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/third" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TypeOfPole"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/pole_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/list" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/HeightOfFenc"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/fence_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/range" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/DistanceBetweenPoles" />

            <Spinner
                android:id="@+id/dist_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/twelve" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/SupportBetweenPoles"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/support_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/corners" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/PriceOfBarbedWire"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/barbed_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/PriceOfPole"
                android:textSize="20dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/PriceOfBrace"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/brace_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/PriceOfJBolt"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/bolt_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/LabourCharges"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/poledist_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/NumberOfLabourers"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/number_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/fifteen" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/BarbedWire" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/StandardFence" />

</LinearLayout>